Docker/envoy.conf.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: mc3-envoy-conf
data:
  envoy-config.yaml: |- 
    admin:
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8001

    static_resources:
      listeners: 
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
          - filters: 
            - name: envoy.filters.network.http_connection_manager
              typed_config: 
                '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                stat_prefix: ingress_http
                http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config: 
                  name: all
                  virtual_hosts:
                    - name: all_traffic
                      domains: ["*"]
                      routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: backend_cluster
      clusters: 
        - name: backend_cluster
          connect_timeout: 1s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
            cluster_name: backend_cluster
            endpoints: 
              - lb_endpoints:
                - endpoint: 
                    address:
                      socket_address: 
                        address: 127.0.0.1
                        port_value: 5000
